samples/_failures_safe/1761224804_32c2ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19a42e31.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_19a42e31.c:171:34: error: expected ‘;’ at end of input
  171 |         case TOKEN_NUMBER: printf
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_19a42e31.c:171:9: error: expected declaration or statement at end of input
  171 |         case TOKEN_NUMBER: printf
      |         ^~~~
./samples/SAFE/__tmp_19a42e31.c:171:9: error: expected declaration or statement at end of input
